feat: added login, and reset password
